; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hpreg.c_GetWmRD.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hpreg.c_GetWmRD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64, i64, i64, i32, i64, i64 }
%struct.TYPE_7__ = type { i64, i32 }

@NO_REQ = common dso_local global i64 0, align 8
@regDomainPairs = common dso_local global %struct.TYPE_8__* null, align 8
@.str = private unnamed_addr constant [32 x i8] c"Failed to find reg domain pair \00", align 1
@FALSE = common dso_local global i32 0, align 4
@ZM_REG_FLAG_CHANNEL_2GHZ = common dso_local global i64 0, align 8
@regDomains = common dso_local global %struct.TYPE_8__* null, align 8
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetWmRD(i64 %0, i64 %1, %struct.TYPE_7__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_8__*, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %7, align 8
  %13 = load i64, i64* @NO_REQ, align 8
  store i64 %13, i64* %11, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %12, align 8
  store i64 0, i64* %8, align 8
  store i64 0, i64* %9, align 8
  br label %14

14:                                               ; preds = %38, %3
  %15 = load i64, i64* %8, align 8
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** @regDomainPairs, align 8
  %17 = call i64 @N(%struct.TYPE_8__* %16)
  %18 = icmp ult i64 %15, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i64, i64* %9, align 8
  %21 = icmp ne i64 %20, 0
  %22 = xor i1 %21, true
  br label %23

23:                                               ; preds = %19, %14
  %24 = phi i1 [ false, %14 ], [ %22, %19 ]
  br i1 %24, label %25, label %41

25:                                               ; preds = %23
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** @regDomainPairs, align 8
  %27 = load i64, i64* %8, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* %5, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %37

33:                                               ; preds = %25
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** @regDomainPairs, align 8
  %35 = load i64, i64* %8, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i64 %35
  store %struct.TYPE_8__* %36, %struct.TYPE_8__** %12, align 8
  store i64 1, i64* %9, align 8
  br label %37

37:                                               ; preds = %33, %25
  br label %38

38:                                               ; preds = %37
  %39 = load i64, i64* %8, align 8
  %40 = add i64 %39, 1
  store i64 %40, i64* %8, align 8
  br label %14

41:                                               ; preds = %23
  %42 = load i64, i64* %9, align 8
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %48, label %44

44:                                               ; preds = %41
  %45 = load i64, i64* %5, align 8
  %46 = call i32 @zm_debug_msg1(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i64 %45)
  %47 = load i32, i32* @FALSE, align 4
  store i32 %47, i32* %4, align 4
  br label %109

48:                                               ; preds = %41
  %49 = load i64, i64* %6, align 8
  %50 = load i64, i64* @ZM_REG_FLAG_CHANNEL_2GHZ, align 8
  %51 = and i64 %49, %50
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %60

53:                                               ; preds = %48
  %54 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %55 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %54, i32 0, i32 1
  %56 = load i64, i64* %55, align 8
  store i64 %56, i64* %10, align 8
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %58 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %57, i32 0, i32 5
  %59 = load i64, i64* %58, align 8
  store i64 %59, i64* %11, align 8
  br label %67

60:                                               ; preds = %48
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %62 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %61, i32 0, i32 2
  %63 = load i64, i64* %62, align 8
  store i64 %63, i64* %10, align 8
  %64 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %65 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %64, i32 0, i32 4
  %66 = load i64, i64* %65, align 8
  store i64 %66, i64* %11, align 8
  br label %67

67:                                               ; preds = %60, %53
  store i64 0, i64* %8, align 8
  br label %68

68:                                               ; preds = %94, %67
  %69 = load i64, i64* %8, align 8
  %70 = load %struct.TYPE_8__*, %struct.TYPE_8__** @regDomains, align 8
  %71 = call i64 @N(%struct.TYPE_8__* %70)
  %72 = icmp ult i64 %69, %71
  br i1 %72, label %73, label %97

73:                                               ; preds = %68
  %74 = load %struct.TYPE_8__*, %struct.TYPE_8__** @regDomains, align 8
  %75 = load i64, i64* %8, align 8
  %76 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %74, i64 %75
  %77 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %76, i32 0, i32 0
  %78 = load i64, i64* %77, align 8
  %79 = load i64, i64* %10, align 8
  %80 = icmp eq i64 %78, %79
  br i1 %80, label %81, label %93

81:                                               ; preds = %73
  %82 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %83 = icmp ne %struct.TYPE_7__* %82, null
  br i1 %83, label %84, label %92

84:                                               ; preds = %81
  %85 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %86 = bitcast %struct.TYPE_7__* %85 to i32*
  %87 = load %struct.TYPE_8__*, %struct.TYPE_8__** @regDomains, align 8
  %88 = load i64, i64* %8, align 8
  %89 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %87, i64 %88
  %90 = bitcast %struct.TYPE_8__* %89 to i32*
  %91 = call i32 @zfMemoryCopy(i32* %86, i32* %90, i32 16)
  br label %92

92:                                               ; preds = %84, %81
  br label %93

93:                                               ; preds = %92, %73
  br label %94

94:                                               ; preds = %93
  %95 = load i64, i64* %8, align 8
  %96 = add i64 %95, 1
  store i64 %96, i64* %8, align 8
  br label %68

97:                                               ; preds = %68
  %98 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %99 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %98, i32 0, i32 3
  %100 = load i32, i32* %99, align 8
  %101 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %102 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %101, i32 0, i32 1
  %103 = load i32, i32* %102, align 8
  %104 = and i32 %103, %100
  store i32 %104, i32* %102, align 8
  %105 = load i64, i64* %11, align 8
  %106 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %107 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %106, i32 0, i32 0
  store i64 %105, i64* %107, align 8
  %108 = load i32, i32* @TRUE, align 4
  store i32 %108, i32* %4, align 4
  br label %109

109:                                              ; preds = %97, %44
  %110 = load i32, i32* %4, align 4
  ret i32 %110
}

declare dso_local i64 @N(%struct.TYPE_8__*) #1

declare dso_local i32 @zm_debug_msg1(i8*, i64) #1

declare dso_local i32 @zfMemoryCopy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
